fixed media queries

--- a/style.css
+++ b/style.css
@@ -4,14 +4,8 @@ body{
 }
 
 @media only screen and (max-width: 768px){
-body{
-    width: 100%;
-}
-#info{
-    width: 100%;
-    background: red;
-    margin: 0;
-    position: relative;
+.container{
+    max-width: 100%;
 }
 }
 
